<resources>
    <string name="app_name">Coffee Order</string>
    <string name="coffee">Coffee</string>
    <string name="order_type">Choose the type of the order</string>
    <string name="in_order">IN order</string>
    <string name="out_order">OUT order</string>
    <string name="developed_by">Developed by Amgad Mahmoud</string>
    <string name="table_number">Table Number: </string>
    <string name="enter_table_number">Enter Table Number</string>
    <string name="start_order">Start Order</string>
    <string name="customer_name">Customer Name: </string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="phone_number">Phone number: </string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="address">Address: </string>
    <string name="enter_address">Enter Address</string>
    <string name="quantity">Quantity</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="one" translatable="false">1</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">chocolate</string>
    <string name="order">Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="zero_dollars" translatable="false">$0</string>
</resources>
