<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/table"
        android:contentDescription="@string/coffee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="increment"
                android:text="@string/plus"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/one"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="decrement"
                android:text="@string/minus"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:text="@string/whipped_cream"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:text="@string/chocolate"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/ButtonOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="sans-serif"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/order_summary"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/zero_dollars"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


    </LinearLayout>
</RelativeLayout>
